
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ethyca_fides"
dynamic = ["version"]
description = "Open-source ecosystem for data privacy as code."
readme = "README.md"
requires-python = ">=3.9, <=3.10"
license = { text = "Apache License 2.0" }
authors = [
    { name = "Ethyca, Inc.", email = "fidesteam@ethyca.com" }
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "acryl-datahub==0.14.1",
    "alembic==1.8.1",
    "anyascii==0.3.2",
    "anyio==3.7.1",
    "APScheduler==3.9.1.post1",
    "asyncpg==0.27.0",
    "boto3==1.26.1",
    "certifi==2024.8.30",
    "celery[pytest]==5.5.3",
    "click==8.1.8",
    "click_default_group==1.2.2",
    "cloud-sql-python-connector==1.9.2",
    "colorama>=0.4.3",
    "cryptography==44.0.1",
    "dask==2022.9.2",
    "deepdiff==6.3.0",
    "objgraph==3.6.0",
    "defusedxml==0.7.1",
    "types-defusedxml==0.7.0.20240218",
    "expandvars==0.9.0",
    "fastapi[all]==0.115.2",
    "fastapi-pagination[sqlalchemy]==0.12.25",
    "fideslog==1.2.14",
    "firebase-admin==5.3.0",
    "flower==2.0.1",
    "GitPython==3.1.41",
    "httpx==0.23.1",
    "onepassword-sdk==0.3.0",
    "iab-tcf==0.2.2",
    "immutables==0.20",
    "importlib_resources==5.12.0",
    "Jinja2==3.1.5",
    "joblib==1.3.2",
    "loguru==0.6.0",
    "multidimensional_urlencode==0.0.4",
    "pg8000==1.31.2",
    "nh3==0.2.15",
    "numpy==1.24.4",
    "oauthlib==3.3.1",
    "okta==2.7.0",
    "openpyxl==3.0.9",
    "networkx==3.1",
    "packaging==23.0",
    "pandas==1.4.3",
    "paramiko==3.4.1",
    "passlib[bcrypt]==1.7.4",
    "pyinstrument==4.5.1",
    "psycopg2-binary==2.9.6",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.3",
    "pydash==6.0.2",
    "pygtrie==2.5.0",
    "PyJWT==2.4.0",
    "pymongo[srv]==4.7.3",
    "PyMySQL==1.1.1",
    "python-jose[cryptography]==3.3.0",
    "pyyaml==6.0.1",
    "pyahocorasick==2.1.0",
    "redis==3.5.3",
    "requests-oauthlib==2.0.0",
    "rich-click==1.6.1",
    "sendgrid==6.9.7",
    "scylla-driver==3.26.8",
    "slowapi==0.1.9",
    "smart-open[s3,gcs]==7.3.0.post1",
    "snowflake-sqlalchemy==1.5.1",
    "sqlalchemy[asyncio]==1.4.27",
    "sqlalchemy-citext==1.8.0",
    "sqlalchemy-bigquery==1.7.0",
    "sqlalchemy-redshift==0.8.11",
    "sqlalchemy-stubs==0.4",
    "SQLAlchemy-Utils==0.38.3",
    "sshtunnel==0.4.0",
    "stream-zip==0.0.83",
    "tinycss2==1.2.1",
    "toml==0.10.2",
    "twilio==7.15.0",
    "typing-extensions==4.12.2",
    "versioneer==0.19",
    "fideslang==3.1.2",
]

[dependency-groups]
tests-mssql = [
    "pymssql==2.3.7",
]

dev = [
    "black==24.3.0",
    "debugpy==1.6.3",
    "Faker==14.1.0",
    "freezegun==1.5.1",
    "GitPython==3.1.41",
    "isort==5.12.0",
    "moto[s3]==5.1.0",
    "mypy==1.10.0",
    "nox==2022.8.7",
    "pre-commit==2.20.0",
    "pylint==3.2.5",
    "pytest-asyncio==0.19.0",
    "pytest-cov==4.0.0",
    "pytest-env==0.7.0",
    "pytest-mock==3.14.0",
    "pytest-rerunfailures==14.0",
    "pytest-xdist==3.6.1",
    "pytest==7.2.2",
    "pytest-profiling==1.8.1",
    "requests-mock==1.10.0",
    "setuptools>=64.0.2",
    "sqlalchemy-stubs==0.4",
    "types-oauthlib==3.3.0.20250822",
    "types-paramiko==3.0.0.10",
    "types-PyYAML==6.0.11",
    "types-redis==4.3.4",
    "types-requests",
    "types-requests_oauthlib==2.0.0.20250809",
    "types-toml==0.10.8",
    "types-ujson==5.4.0",
    "types-urllib3==1.26.23",
    "watchfiles==0.19.0",
    "werkzeug==3.0.6",
    "xenon==0.9.0",
]


[tool.uv]
override-dependencies = ["debugpy>=1.8.12"]


[project.scripts]
fides = "fides.cli:cli"

[project.urls]
Homepage = "https://github.com/ethyca/fides"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/fides"]

##########
## MyPy ##
##########
[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
files = ["src"]
exclude = ["migrations/"]
no_implicit_reexport = true
plugins = ["pydantic.mypy", "sqlmypy"]
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true

[pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module= "fides._version"
ignore_errors=true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "AccessControl.*",
  "alembic.*",
  "apscheduler.*",
  "boto3.*",
  "botocore.*",
  "bson.*",
  "cassandra.*",
  "celery.*",
  "citext.*",
  "click_default_group.*",
  "dask.*",
  "deepdiff.*",
  "defusedxml.ElementTree.*",
  "fideslog.*",
  "firebase_admin.*",
  "google.api_core.*",
  "joblib.*",
  "jose.*",
  "jwt.*",
  "multidimensional_urlencode.*",
  "networkx.*",
  "nh3.*",
  "okta.*",
  "pandas.*",
  "pg8000.*",
  "pydash.*",
  "pygtrie.*",
  "pymongo.*",
  "pymysql.*",
  "RestrictedPython.*",
  "sendgrid.*",
  "smart_open.*",
  "snowflake.*",
  "sqlalchemy_utils.*",
  "sqlalchemy.ext.*",
  "sqlalchemy.future.*",
  "sqlalchemy_bigquery.*",
  "twilio.*",
  "uvicorn.*",
]
ignore_missing_imports = true

###########
## Black ##
###########
[tool.black]
target-version = ["py39"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

###########
## isort ##
###########
[tool.isort]
known_first_party = ["versioneer"]
known_third_party = ["nox"]
profile = "black"
line_length = 88
src_paths = ["src", "tests", "noxfiles"]

############
## Pylint ##
############
[tool.pylint.messages_control]
disable=[
    "bad-option-value",
    "broad-except",
    "broad-exception-raised",
    "consider-using-f-string",
    "dangerous-default-value",
    "duplicate-code",
    "fixme",
    "import-error",
    "import-outside-toplevel",
    "invalid-name",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-timeout",
    "no-self-argument",
    "no-self-use",
    "raise-missing-from",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-locals",
    "unnecessary-comprehension",
    "unnecessary-lambda-assignment",
    "unsubscriptable-object", # Otherwise throws errors on certain Type annotations
    "unused-argument",
]

[tool.pylint.reports]
reports="no"
output-format="colorized"

[tool.pylint.format]
max-line-length="88"

[tool.pylint.basic]
good-names="_,i,setUp,tearDown,maxDiff,default_app_config"

[tool.pylint.ignore]
ignore="migrations,tests"

[tool.pylint.whitelist]
extension-pkg-whitelist = ["pydantic", "zlib", "cassandra"]

############
## Pytest ##
############
[tool.pytest.ini_options]
env = [
  "FIDES__TEST_MODE=true",
  "FIDES__SECURITY__AUTH_RATE_LIMIT=1000/minute"
]
log_cli=false
filterwarnings = "ignore::DeprecationWarning:aiofiles.*:"
testpaths="tests"
log_level = "INFO"
addopts = [
    "--cov=fides",
    "--cov-branch",
    "--no-cov-on-fail",
    "-ra",
    "-vv",
    "--disable-pytest-warnings"
]
markers = [
    "unit: only runs tests that don't require non-python dependencies (i.e. a database)",
    "integration: only runs tests that require application dependencies (i.e. a database)",
    "external: only runs tests that require access to non-docker, external services (i.e. Snowflake)",
    "postgres: only runs the integration tests for postgres",
    "mssql: only runs the integration tests for sqlserver/mssql",
    "mysql: only runs the integration tests for mysql",
    "serial: marks tests that must run sequentially to avoid resource conflicts",
    "async_dsr: marks tests related to async DSR functionality",
    "integration",
    "integration_external",
    "integration_mysql",
    "integration_postgres",
    "integration_mongodb",
    "integration_mongodb_atlas",
    "integration_mssql",
    "integration_google_cloud_sql_mysql",
    "integration_google_cloud_sql_postgres",
    "integration_rds_mysql",
    "integration_rds_postgres",
    "integration_redshift",
    "integration_snowflake",
    "integration_mariadb",
    "integration_bigquery",
    "integration_dynamodb",
    "integration_saas",
    "integration_saas_override",
    "integration_scylladb",
    "unit_saas"
]
asyncio_mode = "auto"
plugins = [ "pytest_profiling" ]

[tool.coverage.run]
omit = ["src/fides/api/alembic/migrations/*"]
